--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WOW APPS</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -23,7 +23,51 @@
 </html>
 
 <section  class="features"
-<div>class="container"
+ <div class="container"
 
-    <div
+ /div> 
+
+    
 </div> 
+
+<section class="features">
+    <div class="container">
+
+        <div class="feature">
+            <img src="https://www.sololearn.com/uploads/img_blue_pin.png" alt=""/>
+            <p>An awesome feature</p>
+
+        </div>
+    </div class="feature">
+    <img src="https://www.sololearn.com/uploads/img_blue_chart.png" alt=""/>
+    <p>An awesome feature</p>
+    </div>
+
+    <div class="feature">
+        <img src="https://www.sololearn.com/uploads/img_blue_msg.png" alt=""/>
+        <p>An awesome feature</p>
+    
+    </div>
+
+</div>
+
+</section>
+
+<section class="quote">
+    <blockquote class="container">
+        <p>"Some great quote!"</p>
+        <cite>Satisfied Costumer</cite>
+    </blockquote>
+</section>
+
+<footer>
+    <div class="container">
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+         </ul>
+         <p>All rights reserved.</p>
+    </div>
+</footer>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
